works as expected now to generate field/member definitions

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tyolab/node-programmer#readme",
   "dependencies": {
-    "bunyan": "^1.8.10"
+    "bunyan": "^1.8.10",
+    "tyo-utils": "0.0.1"
   }
 }
