--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-programmer",
   "version": "0.0.2",
   "description": "A programmer bot for doing some boring programming jobs for software developers",
-  "main": "index.js",
+  "main": "java.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
