--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-programmer",
-  "version": "0.0.23",
+  "version": "0.0.25",
   "description": "A programmer bot for doing some boring programming jobs for software developers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --config ./test/mocha.json"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,11 @@
   "dependencies": {
     "bunyan": "^1.8.10",
     "tyo-utils": "0.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^9.2.2",
+    "chai": "4.1.2",
+    "@types/chai": "4.0.4",
+    "@types/mocha": "2.2.43"
   }
 }
